Bug 979981 - [B2G] [Bluetooth] Truncated devices names will have their ellipses overlap the icon

--- a/apps/bluetooth/style/icons.css
+++ b/apps/bluetooth/style/icons.css
@@ -9,7 +9,7 @@
 .bluetooth-device {
   background-repeat: no-repeat;
   background-position: right 3rem top 50%; /* same position as for Wi-Fi signal levels */
-  padding-right: 3rem;
+  padding-right: 2rem;
 }
 
 .bluetooth-device:before {
@@ -18,7 +18,7 @@
   height: 3rem;
   background: url(images/bluetooth_sprite.png) no-repeat 3rem 3rem / 39rem;
   position: absolute;
-  right: 3rem;
+  right: 0rem;
   top: 50%;
   margin-top: -1.5rem;
 }
@@ -122,13 +122,13 @@
 }
 
 .bluetooth-type-printer:before {
-  background-position: -30rem -30rem;
+  background-position: -30rem -3rem;
 }
 
 .bluetooth-type-scanner:before {
-  background-position: -33rem -30rem;
+  background-position: -33rem -3rem;
 }
 
 .bluetooth-type-video-display:before {
-  background-position: -36rem -30rem;
+  background-position: -36rem -3rem;
 }
