--- a/apps/bluetooth/style/settings.css
+++ b/apps/bluetooth/style/settings.css
@@ -57,7 +57,7 @@ section[role="region"] > div {
  */
 
 .explanation {
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 3rem;
   font-style: italic;
   font-size: 1.4rem;
   color: #505859;
